Fix overflow.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -14,10 +14,6 @@ $padding-link-icon: 3px;
   font-size: $font-size;
 }
 
-body {
-  overflow: scroll;
-}
-
 .navbar-toggler {
   margin-right: $navbar-toggler-margin;
 }
